# augurs

./: .gitignore  .gitmodules  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  NOTES  README.md  bacon.toml  compile.sh  justfile  release-plz.toml
.github/: dependabot.yml
.github/workflows/: benchmark.yaml  book.yml  go.yml  js-release.yml  js.yml  pytest.yml  python.yml  release-plz.yml  run_benchmarks.yaml  rust.yml  test-book-examples.yml  track_benchmarks.yaml  wasmstan.yml
book/: .gitignore  book.toml  justfile  langtabs.js
book/scripts/: test_examples.py
book/src/: SUMMARY.md  contributing.md  introduction.md  migrating.md
components/: justfile  package-lock.json
components/js/: .gitignore
components/rust/: README.md
components/rust/changepoint/: Cargo.toml
components/rust/changepoint/src/: lib.rs
components/rust/changepoint/wit/: changepoint.wit
components/rust/dtw/: Cargo.toml
components/rust/dtw/src/: bindings.rs  lib.rs
components/rust/dtw/wit/: dtw.wit
crates/augurs/: CHANGELOG.md  Cargo.toml  README.md
crates/augurs-arima/: Cargo.toml
crates/augurs-arima/src/: error.rs  estimation.rs  kalman.rs  lib.rs  transformations.rs  types.rs  utils.rs
crates/augurs-changepoint/: CHANGELOG.md  Cargo.toml  README.md
crates/augurs-changepoint/src/: lib.rs
crates/augurs-clustering/: CHANGELOG.md  Cargo.toml  README.md
crates/augurs-clustering/benches/: dbscan.rs
crates/augurs-clustering/src/: lib.rs
crates/augurs-core/: CHANGELOG.md  Cargo.toml  README.md
crates/augurs-core/src/: distance.rs  float_iter.rs  forecast.rs  interpolate.rs  lib.rs  traits.rs
crates/augurs-dtw/: CHANGELOG.md  Cargo.toml  README.md
crates/augurs-dtw/benches/: dtw.rs
crates/augurs-dtw/data/: series.csv
crates/augurs-dtw/src/: lib.rs
crates/augurs-ets/: CHANGELOG.md  Cargo.toml  README.md
crates/augurs-ets/benches/: air_passengers.rs  air_passengers_iai.rs
crates/augurs-ets/src/: auto.rs  data.rs  ets.rs  lib.rs  model.rs  stat.rs  trend.rs
crates/augurs-forecaster/: CHANGELOG.md  Cargo.toml  README.md
crates/augurs-forecaster/src/: data.rs  error.rs  forecaster.rs  lib.rs  power_transforms.rs  transforms.rs
crates/augurs-forecaster/src/transforms/: error.rs  exp.rs  interpolate.rs  power.rs  scale.rs
crates/augurs-js/: CHANGELOG.md  Cargo.toml  README.md  prepublish.js  rust-toolchain.toml
crates/augurs-js/src/: changepoints.rs  clustering.rs  dtw.rs  ets.rs  lib.rs  mstl.rs  outlier.rs  prophet.rs  seasons.rs
crates/augurs-js/testpkg/: changepoints.test.ts  clustering.test.ts  dtw.test.ts  ets.test.ts  logging.test.ts  mstl.test.ts  outlier.test.ts  package-lock.json  package.json  prophet.real.test.ts  prophet.test.ts  seasons.test.ts
crates/augurs-mstl/: CHANGELOG.md  Cargo.toml  README.md
crates/augurs-mstl/benches/: vic_elec.rs  vic_elec_iai.rs
crates/augurs-mstl/src/: lib.rs  mstl.rs  trend.rs
crates/augurs-outlier/: CHANGELOG.md  Cargo.toml  README.md
crates/augurs-outlier/src/: dbscan.rs  error.rs  lib.rs  mad.rs  multizip.rs  sensitivity.rs  testing.rs
crates/augurs-prophet/: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs  prophet-wasmstan.wasm  prophet-wasmstan.wit  prophet.stan
crates/augurs-prophet/benches/: prophet-cmdstan-logistic.rs  prophet-linear.rs  prophet-wasmstan-linear.rs  prophet-wasmstan-logistic.rs  real-life.rs
crates/augurs-prophet/src/: cmdstan.rs  data.rs  distributions.rs  error.rs  features.rs  forecaster.rs  lib.rs  optimizer.rs  positive_float.rs  prophet.rs  testdata.rs  util.rs  wasmstan.rs
crates/augurs-prophet/src/distributions/: laplace.rs  normal.rs  poisson.rs
crates/augurs-prophet/src/prophet/: options.rs  predict.rs  prep.rs
crates/augurs-prophet/tests/: linear.rs  real.rs  wasmstan.rs
crates/augurs-seasons/: CHANGELOG.md  Cargo.toml  README.md
crates/augurs-seasons/benches/: periodogram.rs
crates/augurs-seasons/src/: lib.rs  periodogram.rs  test_data.rs
crates/augurs-testing/: CHANGELOG.md  Cargo.toml
crates/augurs-testing/src/: data.rs  lib.rs
crates/augurs-testing/src/data/: seasonal.rs
crates/augurs-transformations/: Cargo.toml  README.md
crates/augurs-transformations/src/: lib.rs  power_transformation.rs
crates/augurs/src/: lib.rs
crates/augurs/tests/: integration.rs
crates/pyaugurs/: .gitignore  CHANGELOG.md  Cargo.toml  README.md  augurs.pyi  pyproject.toml
crates/pyaugurs/src/: clustering.rs  distance.rs  dtw.rs  ets.rs  lib.rs  mstl.rs  seasons.rs  trend.rs
crates/pyaugurs/tests/: test_clustering.py  test_dtw.py  test_ets.py  test_mstl.py  test_seasons.py
crates/tracing-dupe-events/: Cargo.toml
crates/tracing-dupe-events/src/: main.rs
demo/: changepoint.js  changepoint.worker.js  clustering.js  clustering.worker.js  helpers.js  index.html  index.js  mstl.js  mstl.worker.js  outlier.data.json  outlier.js  outlier.worker.js  plugins.js  prophet.js  prophet.worker.js
examples/clustering/: Cargo.toml
examples/clustering/examples/: dbscan_clustering.rs
examples/forecasting/: Cargo.toml
examples/outlier-detection/: Cargo.toml
examples/outlier-detection/examples/: dbscan_outlier_detection.rs  mad_outlier_detection.rs
go/: README.md  go.mod  justfile
go/changepoint/: changepoint.go  changepoint.wasm  changepoint_test.go  doc.go
go/outlier/: doc.go  outlier.go  outlier.wasm  outlier_test.go
js/: README.md  justfile  package.json.tmpl
js/augurs-changepoint-js/: Cargo.toml
js/augurs-changepoint-js/src/: lib.rs
js/augurs-clustering-js/: Cargo.toml
js/augurs-core-js/: Cargo.toml
js/augurs-core-js/src/: lib.rs  logging.rs
js/augurs-dtw-js/: Cargo.toml
js/augurs-dtw-js/src/: lib.rs
js/augurs-ets-js/: Cargo.toml
js/augurs-mstl-js/: Cargo.toml
js/augurs-mstl-js/src/: lib.rs
js/augurs-outlier-js/: Cargo.toml
js/augurs-prophet-js/: Cargo.toml
js/augurs-prophet-js/src/: lib.rs
js/augurs-seasons-js/: Cargo.toml
js/augurs-seasons-js/src/: lib.rs
js/augurs-transforms-js/: Cargo.toml
js/augurs-transforms-js/src/: lib.rs
js/testpkg/: changepoints.test.ts  clustering.test.ts  dtw.test.ts  (+10 more)
(+90 files in other folders)
