[package]
name = "augurs-core"
version.workspace = true
authors.workspace = true
documentation.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
keywords.workspace = true
description = "Core data structures and traits for the augurs time series library."

[dependencies]
serde = { version = "1.0.166", optional = true, features = ["derive"] }
