[package]
name = "augurs-ets"
version.workspace = true
authors.workspace = true
documentation.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
keywords.workspace = true
description = "ETS models for augurs"

[dependencies]
augurs-core.workspace = true
augurs-mstl = { workspace = true, optional = true }
distrs.workspace = true
itertools.workspace = true
lstsq = "0.5.0"
nalgebra = "0.32.2"
rand = "0.8.5"
rand_distr = "0.4.3"
roots = "0.0.8"
serde = { workspace = true, optional = true, features = ["derive"] }
thiserror.workspace = true
tracing.workspace = true

[features]
mstl = ["dep:augurs-mstl"]
serde = ["dep:serde"]

[dev-dependencies]
assert_approx_eq.workspace = true
augurs-testing.workspace = true
criterion.workspace = true
iai.workspace = true
pprof.workspace = true

[[bench]]
name = "air_passengers"
harness = false

[[bench]]
name = "air_passengers_iai"
harness = false
