[package]
name = "augurs-ets"
version.workspace = true
authors.workspace = true
documentation.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
keywords.workspace = true
description = "ETS models for augurs"

[dependencies]
augurs-core.workspace = true
augurs-mstl = { workspace = true, optional = true }
distrs.workspace = true
itertools.workspace = true
lstsq = "0.7.0"
nalgebra = "0.34.0"
rand.workspace = true
rand_distr = "0.5.1"
roots.workspace = true
serde = { workspace = true, optional = true, features = ["derive"] }
thiserror.workspace = true
tracing.workspace = true

[features]
mstl = ["dep:augurs-mstl"]
serde = ["dep:serde"]

[dev-dependencies]
augurs-testing.workspace = true
criterion.workspace = true
iai.workspace = true

[lib]
bench = false

[[bench]]
name = "air_passengers"
harness = false

[[bench]]
name = "air_passengers_iai"
harness = false

[lints]
workspace = true
