[package]
name = "augurs-forecaster"
license.workspace = true
authors.workspace = true
documentation.workspace = true
repository.workspace = true
version.workspace = true
edition.workspace = true
keywords.workspace = true
description = "A high-level API for the augurs forecasting library."

[lib]
bench = false

[dependencies]
augurs-core.workspace = true
itertools.workspace = true
thiserror.workspace = true
argmin = "0.10.0"

[dev-dependencies]
augurs = { workspace = true, features = ["mstl", "ets", "forecaster"]}
augurs-testing.workspace = true

[lints]
workspace = true
