[package]
name = "augurs"
version.workspace = true
authors.workspace = true
documentation.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
keywords.workspace = true
description = "JavaScript bindings for the augurs time series library."
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
augurs-core = { workspace = true, features = ["serde"] }
augurs-ets = { workspace = true, features = ["mstl", "serde"] }
augurs-mstl = { workspace = true, features = ["serde"] }
augurs-seasons = { workspace = true }
# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
getrandom = { version = "0.2.10", features = ["js"] }
js-sys = "0.3.64"
serde.workspace = true
serde-wasm-bindgen = "0.6.0"
tracing-wasm = { version = "0.2.1", optional = true }
wasm-bindgen = "0.2.87"
