[package]
name = "augurs-js"
version.workspace = true
authors.workspace = true
documentation.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
keywords.workspace = true
description = "JavaScript bindings for the augurs time series library."
publish = false

[lib]
bench = false
crate-type = ["cdylib", "rlib"]
doc = false
doctest = false
test = false

[features]
parallel = ["wasm-bindgen-rayon"]

[dependencies]
augurs-changepoint = { workspace = true }
augurs-clustering = { workspace = true }
augurs-core = { workspace = true }
augurs-dtw = { workspace = true, features = ["parallel"] }
augurs-ets = { workspace = true, features = ["mstl"] }
augurs-forecaster.workspace = true
augurs-mstl = { workspace = true }
augurs-outlier = { workspace = true }
augurs-seasons = { workspace = true }
console_error_panic_hook = "0.1.7"
getrandom = { version = "0.2.10", features = ["js"] }
js-sys = "0.3.64"
serde.workspace = true
serde-wasm-bindgen = "0.6.0"
tracing-wasm = { version = "0.2.1", optional = true }
tsify-next = { version = "0.5.3", default-features = false, features = ["js"] }
wasm-bindgen = "0.2.87"
wasm-bindgen-rayon = { version = "1.2.1", optional = true }
