[package]
name = "augurs-mstl"
version = "0.1.0-alpha.1"
license = "MIT/Apache-2.0"
edition = "2021"

[dependencies]
augurs-core.workspace = true
distrs.workspace = true
serde = { workspace = true, features = ["derive"], optional = true }
stlrs = { git = "https://github.com/sd2k/stl-rust", branch = "python-lib", version = "0.2.1" }
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
assert_approx_eq.workspace = true
augurs-testing.workspace = true
criterion.workspace = true
iai.workspace = true
pprof.workspace = true

[[bench]]
name = "vic_elec"
harness = false

[[bench]]
name = "vic_elec_iai"
harness = false
