[package]
name = "augurs-mstl"
version.workspace = true
authors.workspace = true
documentation.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
keywords.workspace = true
description = "Multiple Seasonal-Trend decomposition with LOESS (MSTL) using the augurs time series library."

[dependencies]
augurs-core.workspace = true
distrs.workspace = true
serde = { workspace = true, features = ["derive"], optional = true }
stlrs = "0.3.0"
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
assert_approx_eq.workspace = true
augurs-testing.workspace = true
criterion.workspace = true
iai.workspace = true
pprof.workspace = true

[[bench]]
name = "vic_elec"
harness = false

[[bench]]
name = "vic_elec_iai"
harness = false
