[package]
name = "augurs-outlier"
license.workspace = true
authors.workspace = true
documentation.workspace = true
repository.workspace = true
version.workspace = true
edition.workspace = true
keywords.workspace = true
description = "Outlier detection for time series."

[lib]
bench = false

[dependencies]
itertools.workspace = true
rayon = { version = "1.10.0", optional = true }
roots.workspace = true
rustc-hash = "2.0.0"
rv = { version = "0.16.5", default-features = false }
serde = { workspace = true, features = ["derive"], optional = true }
tinyvec = { workspace = true, features = ["std"] }
tracing.workspace = true

[features]
parallel = ["rayon"]
