[package]
name = "augurs-outlier"
license.workspace = true
authors.workspace = true
documentation.workspace = true
repository.workspace = true
version.workspace = true
edition.workspace = true
keywords.workspace = true
description = "Outlier detection for time series."

[lib]
bench = false

[dependencies]
rayon = { version = "1.10.0", optional = true }
rustc-hash = "2.0.0"
serde = { workspace = true, features = ["derive"], optional = true }
tinyvec = { workspace = true, features = ["std"] }
tracing.workspace = true

[features]
parallel = ["rayon"]
