[package]
name = "augurs-outlier"
license.workspace = true
authors.workspace = true
documentation.workspace = true
repository.workspace = true
version.workspace = true
edition.workspace = true
keywords.workspace = true
description = "Outlier detection for time series."

[lib]
bench = false

[dependencies]
itertools.workspace = true
rayon = { version = "1.10.0", optional = true }
roots.workspace = true
rustc-hash = "2.0.0"
rv = { version = "0.18.0", default-features = false }
serde = { workspace = true, features = ["derive"], optional = true }
thiserror.workspace = true
tinyvec = { workspace = true, features = ["std"] }
tracing.workspace = true

[dev-dependencies]
augurs.workspace = true
rand.workspace = true
serde_json.workspace = true

[features]
parallel = ["rayon"]

[lints]
workspace = true
