[package]
name = "augurs-testing"
version.workspace = true
authors.workspace = true
documentation.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
keywords.workspace = true
description = "Test framework and data for the augurs library."

[dependencies]
once_cell = "1.18.0"
