[package]
name = "augurs-testing"
version.workspace = true
authors.workspace = true
documentation.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
keywords.workspace = true
description = "Test framework and data for the augurs library."
publish = false

[lib]
bench = false

[dependencies]
assert_approx_eq = "1.1.0"
once_cell = "1.18.0"

[lints]
workspace = true
