[package]
name = "augurs"
license.workspace = true
authors.workspace = true
documentation.workspace = true
repository.workspace = true
version.workspace = true
edition.workspace = true
keywords.workspace = true
description = "A time-series toolkit for forecasting, outlier detection, clustering and more."

[package.metadata.docs.rs]
all-features = true

[dependencies]
augurs-changepoint = { workspace = true, optional = true }
augurs-clustering = { workspace = true, optional = true }
augurs-core = { workspace = true }
augurs-dtw = { workspace = true, optional = true }
augurs-ets = { workspace = true, optional = true }
augurs-forecaster = { workspace = true, optional = true }
augurs-mstl = { workspace = true, optional = true }
augurs-outlier = { workspace = true, optional = true }
augurs-prophet = { workspace = true, optional = true }
augurs-seasons = { workspace = true, optional = true }

[dev-dependencies]
augurs-testing.workspace = true
itertools.workspace = true

[features]
default = []
changepoint = ["augurs-changepoint"]
clustering = ["augurs-clustering"]
dtw = ["augurs-dtw"]
ets = ["augurs-ets"]
forecaster = ["augurs-forecaster"]
full = ["changepoint", "clustering", "dtw", "ets", "forecaster", "mstl", "outlier", "parallel", "prophet", "prophet-wasmstan", "seasons"]
mstl = ["augurs-mstl", "augurs-ets?/mstl"]
parallel = ["augurs-dtw?/parallel", "augurs-outlier?/parallel"]
prophet = ["augurs-prophet"]
prophet-cmdstan = ["augurs-prophet/cmdstan"]
prophet-compile-cmdstan = ["augurs-prophet/compile-cmdstan"]
prophet-wasmstan = ["augurs-prophet/wasmstan"]
prophet-wasmstan-min = ["augurs-prophet/wasmstan-min"]
outlier = ["augurs-outlier"]
seasons = ["augurs-seasons"]

[lints]
workspace = true
