[package]
name = "pyaugurs"
version = "0.1.0"
license = "MIT/Apache-2.0"
edition = "2021"

[lib]
name = "augurs"
crate-type = ["cdylib"]

[dependencies]
augurs-core.workspace = true
augurs-ets = { workspace = true, features = ["mstl"] }
augurs-mstl.workspace = true
numpy = "0.18.0"
pyo3 = { version = "0.19.0", features = ["extension-module"] }
pyo3-log = "0.8.1"
tracing = { version = "0.1.37", features = ["log-always"] }
