[package]
name = "pyaugurs"
version.workspace = true
authors.workspace = true
documentation.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
keywords.workspace = true
description = "Python bindings for the augurs time series library."
publish = false

[lib]
name = "augurs"
crate-type = ["cdylib"]

[dependencies]
augurs-core.workspace = true
augurs-ets = { workspace = true, features = ["mstl"] }
augurs-mstl.workspace = true
augurs-seasons.workspace = true
numpy = "0.20.0"
pyo3 = { version = "0.20.0", features = ["extension-module"] }
pyo3-log = "0.9.0"
tracing = { version = "0.1.37", features = ["log-always"] }
