[package]
name = "pyaugurs"
version.workspace = true
authors.workspace = true
documentation.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
keywords.workspace = true
description = "Python bindings for the augurs time series library."
publish = false

[lib]
name = "augurs"
bench = false
crate-type = ["cdylib"]
doc = false
doctest = false
test = false

[dependencies]
augurs-clustering.workspace = true
augurs-core.workspace = true
augurs-dtw.workspace = true
augurs-ets = { workspace = true, features = ["mstl"] }
augurs-forecaster.workspace = true
augurs-mstl.workspace = true
augurs-seasons.workspace = true
numpy = "0.25.0"
pyo3 = { version = "0.25.0", features = ["extension-module"] }
tracing = { version = "0.1.37", features = ["log"] }

[lints]
workspace = true
