[package]
name = "tracing_dupe_events_repro"
description = "Repro of duplicate logs being emitted by tracing"
license.workspace = true
authors.workspace = true
documentation.workspace = true
repository.workspace = true
version.workspace = true
edition.workspace = true
keywords.workspace = true
publish = false

[dependencies]
tracing.workspace = true
tracing-subscriber.workspace = true
