[package]
name = "clustering"
description = "Example of time series clustering using augurs"
license.workspace = true
authors.workspace = true
documentation.workspace = true
repository.workspace = true
version.workspace = true
edition.workspace = true
keywords.workspace = true
publish = false

[dependencies]
augurs = { workspace = true, features = ["clustering", "dtw"] }
