[package]
name = "augurs-changepoint-js"
version.workspace = true
authors.workspace = true
documentation.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
keywords.workspace = true
description = "JavaScript bindings for the augurs-changepoint library."
publish = false

[lib]
bench = false
crate-type = ["cdylib", "rlib"]
doc = false
doctest = false
test = false

[dependencies]
augurs-core-js.workspace = true
augurs-changepoint = { workspace = true, features = ["serde"] }
getrandom = { version = "0.3", features = ["wasm_js"] }
js-sys = "0.3.64"
serde.workspace = true
serde-wasm-bindgen = "0.6.0"
tracing.workspace = true
tsify-next = { version = "0.5.3", default-features = false, features = ["js"] }
wasm-bindgen.workspace = true

[package.metadata.wasm-pack.profile.release]
# previously had just ['-O4']
wasm-opt = ['-O4', '--enable-bulk-memory', '--enable-threads']
