[package]
name = "augurs-core-js"
version.workspace = true
authors.workspace = true
documentation.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
keywords.workspace = true
description = "JavaScript bindings for core augurs functionality."
publish = false

[lib]
bench = false
crate-type = ["cdylib", "rlib"]
doc = false
doctest = false
test = false

[features]
default = ["logging"]
logging = ["wasm-tracing"]

[dependencies]
augurs-core = { workspace = true }
console_error_panic_hook = "0.1.7"
# getrandom = { version = "0.2.10", features = ["js"] }
js-sys.workspace = true
serde.workspace = true
serde_json = "1"
serde-wasm-bindgen.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["registry"], default-features = false }
tsify-next.workspace = true
wasm-bindgen.workspace = true
wasm-tracing = { version = "0.2.1", optional = true }

[package.metadata.wasm-pack.profile.release]
# previously had just ['-O4']
wasm-opt = ['-O4', '--enable-bulk-memory', '--enable-threads']

[lints]
workspace = true
